Fix spacing in Tile 1

--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,12 @@ body {
     padding: 50px;
     display: flex;
     padding-top: 0px;
+    justify-content: center;
 }
 
 #tile1image {
-    height: 170px;
-    width: auto;
+    height: auto;
+    width: 300px;
 }
 
 #tile1button {
